--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         		<a class="navbar-brand" ui-sref="movies">The Movie App</a>
         	</div>
         	<div class="collapse navbar-collapse">
-        		<ul class="nav nabar-nav">
+        		<ul class="nav navbar-nav">
         			<li class="active"><a ui-sref="movies">Home</a></li>
         		</ul>
         	</div>
